--- a/public/style.css
+++ b/public/style.css
@@ -63,13 +63,14 @@ a:visited {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 25px 0 60px 0;
+  margin: 45px 0 60px 0;
 }
 .menu_button_order {
   background-image: linear-gradient(to left, #FF79DA 0%, #9356DC 70%, #FF79DA 100%);
   cursor: pointer;
   padding: 18px 60px;
   text-align: center;
+  font-size: 1em;
   transition: 0.5s;
   background-size: 200%;
   color: white;
@@ -90,19 +91,19 @@ a:visited {
   background-color: white;
   width: 100vw;
   height: 100vh;
-  visibility: hidden;
   z-index: 20;
+  animation: spin-background 4s ease-out forwards;
 }
 .spinner .spinner_icon {
   color: #9356DC;
   font-size: 70px;
   margin: auto;
-  position: fixed;
+  position: absolute;
   top: 50px;
   left: 60px;
   bottom: 50px;
   right: 50px;
-  animation: spin 15s 0.25s forwards;
+  animation: spin 10s 0.25s forwards;
 }
 .spinner_load {
   width: 180px;
@@ -119,14 +120,13 @@ a:visited {
   background: rgba(255, 255, 255, 0.8);
   animation: spin 4s 0.25s ease-out forwards;
   z-index: 10;
-  visibility: hidden;
 }
 .spinner_load:hover {
   animation-play-state: paused;
 }
 .spinner_load::after {
   content: "";
-  position: fixed;
+  position: absolute;
   top: 5px;
   left: 5px;
   bottom: 5px;
@@ -166,6 +166,16 @@ a:visited {
     visibility: hidden;
   }
 }
+@keyframes spin-background {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
 
 .header {
   box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.2);
@@ -184,7 +194,7 @@ a:visited {
   position: absolute;
   width: 50px;
   height: 50px;
-  left: 30px;
+  left: 10%;
   top: 40%;
   font-size: 20px;
 }
@@ -294,21 +304,6 @@ a:visited {
 }
 
 /*-- heart animation --*/
-/*.fa-heart {
-    border: black;
-    background: transparent;
-
-}
-.fa-heart::before {
-    font-weight: bold;
-    transition: color 1s ease-out;
-}
-.fa-heart:hover::before{
-   color: $color-primary;
-   cursor: pointer;
-}
-*/
-/* -- autre test --*/
 .fa-heart {
   display: flex;
   font-size: 1.8em;
@@ -321,10 +316,14 @@ a:visited {
 .fa-heart:hover {
   background: linear-gradient(#FF79DA, #9356DC);
   -webkit-background-clip: text;
-  background-clip: text;
+  -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 0px;
   opacity: 1;
   transition: all 1.8s ease-in-out;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
 
 .image {
@@ -339,151 +338,150 @@ a:visited {
 }
 
 #menu {
-  overflow: hidden;
-  font-family: "Roboto", sans-serif;
-  margin: -25px 0 25px 0;
-}
-#menu .menu_top {
-  position: absolute;
-  display: flex;
+  background: white;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  top: 44%;
-  width: 100%;
-  background-color: #f6f6f6;
-  border-radius: 40px 40px 0 0;
-}
-#menu .menu_top_title {
-  font-family: "Shrikhand", cursive;
-  font-weight: 500;
-  font-size: 1.75em;
-  padding: 0 25px;
 }
 
-.menu_bloc {
-  display: grid;
-  grid-gap: 30px;
-  margin: 0 5%;
+.menu {
+  margin-top: -200px;
+  padding: 0 20px;
+  width: 100%;
+  max-width: 1230px;
+  border-radius: 30px 30px 0 0;
+  background-color: #F6F6F6;
 }
-.menu_bloc_card {
+.menu_top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu_top_title {
+  font-family: "Shrikhand", cursive;
+}
+.menu__grid {
+  display: grid;
+  grid-gap: 40px;
+}
+.menu__grid__bloc {
   display: grid;
   grid-gap: 15px;
 }
-.menu_bloc_title h3 {
-  text-transform: uppercase;
-  font-weight: 400;
-  line-height: 1.7em;
-  border-bottom: solid 4px #99E2D0;
-  width: 45px;
-}
-
-.menu_dishes {
+.menu__grid__title h3 {
   position: relative;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.menu__grid__title h3::after {
+  content: "";
+  width: 50px;
+  height: 4px;
+  background: #99e2d0;
+  position: absolute;
+  z-index: 20;
+  left: 0px;
+  bottom: -8px;
+}
+.menu__grid__case {
+  position: relative;
+  cursor: pointer;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
+  width: 100%;
+  height: 70px;
+  border-radius: 15px;
   background-color: white;
-  border-radius: 20px;
-  padding: 6px 10px;
-  box-shadow: 1px 3px 10px 1px #ececec;
-  cursor: pointer;
-  line-height: 0.4em;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
 }
-.menu_dishes .dish_title {
-  font-size: 1.1em;
+.menu__grid__case:hover .validation__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: slide-left 0.5s ease;
+  transform-origin: right;
 }
-.menu_dishes .dish_subtitle {
-  font-size: 0.92em;
+.menu__grid__case:hover .menu__case__price {
+  padding-right: 70px;
+  transition: 0.5s ease;
 }
-.menu_dishes .dish_price {
-  align-self: flex-end;
-  font-weight: 700;
-  font-size: 0.95em;
-  padding: 0 15px 10px 0;
+.menu__grid__case .validation__box {
+  display: none;
+  position: absolute;
+  background: #99E2D0;
+  border-radius: 0 15px 15px 0;
+  right: 0px;
+  padding: 0 18px;
+  height: 100%;
+}
+.menu__grid__case .validation__box i {
+  font-size: 25px;
+  color: white;
+  transform: rotate(180deg);
+  animation: rotate 0.5s both;
+}
+.menu__case__dish {
+  margin-left: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.menu__case__dish p {
+  margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.menu__case__dish-title {
+  font-weight: bold;
+}
+.menu__case__price {
+  padding-right: 20px;
+  font-weight: bold;
+  padding-left: 7px;
+}
+
+.dish-and-price {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /*-- menu animation --*/
-/*.menu_dishes{
-   animation: opacity 1.5s both;
-}
-
-@keyframes opacity {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-
-.menu_dishes--1{
-    animation-delay: 0.3s;
-}
-.menu_dishes--2{
-    animation-delay: 0.5s;
-}
-.menu_dishes--3{
-    animation-delay: 0.7s;
-}
-.menu_dishes--4{
-    animation-delay: 0.9s;
-}
-.menu_dishes--5{
-    animation-delay: 1.1s;
-}
-.menu_dishes--6{
-    animation-delay: 1.3s;
-}
-.menu_dishes--7{
-    animation-delay: 1.5s;
-}
-.menu_dishes--8{
-    animation-delay: 1.7s;
-}
-.menu_dishes--9{
-    animation-delay: 1.9s;
-}
-.menu_dishes--10{
-    animation-delay: 2.1s;
-}*/
-.menu_dishes {
+.menu__grid__case {
   animation: opacity 1.5s both;
 }
-.menu_dishes--1 {
+.menu__grid__case--1 {
   animation-delay: 200ms;
 }
-.menu_dishes--2 {
+.menu__grid__case--2 {
   animation-delay: 400ms;
 }
-.menu_dishes--3 {
+.menu__grid__case--3 {
   animation-delay: 600ms;
 }
-.menu_dishes--4 {
+.menu__grid__case--4 {
   animation-delay: 800ms;
 }
-.menu_dishes--5 {
+.menu__grid__case--5 {
   animation-delay: 1000ms;
 }
-.menu_dishes--6 {
+.menu__grid__case--6 {
   animation-delay: 1200ms;
 }
-.menu_dishes--7 {
+.menu__grid__case--7 {
   animation-delay: 1400ms;
 }
-.menu_dishes--8 {
+.menu__grid__case--8 {
   animation-delay: 1600ms;
 }
-.menu_dishes--9 {
+.menu__grid__case--9 {
   animation-delay: 1800ms;
 }
-.menu_dishes--10 {
+.menu__grid__case--10 {
   animation-delay: 2000ms;
 }
 
@@ -493,6 +491,23 @@ a:visited {
   }
   100% {
     opacity: 1;
+  }
+}
+/*-- checkbox animation --*/
+@keyframes slide-left {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(-50px);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 /*-- location search */
@@ -639,30 +654,28 @@ a:visited {
   }
 }
 /*-- MENU PAGES --*/
+@media screen and (min-width: 665px) {
+  .menu {
+    margin-top: -80px;
+  }
+}
 @media screen and (min-width: 765px) {
+  .header_icon {
+    left: 32%;
+  }
+
   .image_img {
     margin: 0;
   }
 
-  .menu_top {
-    margin-top: 52px;
+  .menu {
+    margin-top: -50px;
   }
 
-  .menu_bloc {
-    margin-top: 35px;
-  }
-
-  .menu_bloc_card {
+  .menu__grid {
     display: grid;
-    width: 100%;
-    grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1.5fr;
-    grid-template-areas: "menu_bloc_title menu_bloc_title menu_bloc_title";
-  }
-
-  .menu_bloc_title {
-    grid-area: menu_bloc_title;
+    grid-template-rows: 1fr;
   }
 }
 
