--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -1,17 +1,18 @@
 .spinner{
+    
     position: fixed;
-    background: white;
+    background-color: white;
     width: 100vw;
     height: 100vh;
-    visibility: hidden;
     z-index: 20;
+    animation: spin-background 4s ease-out forwards;
     .spinner_icon{
         color: $color-primary;
         font-size: 70px;
         margin: auto;
-        position: fixed;
+        position: absolute;
         top: 50px; left: 60px; bottom: 50px; right: 50px;
-        animation: spin 15s 0.25s forwards;
+        animation: spin 10s 0.25s forwards;
         }
     &_load{
     width: 180px;
@@ -25,14 +26,14 @@
     background: rgb(255,255,255,0.8);
     animation: spin 4s 0.25s ease-out forwards;
     z-index: 10;
-    visibility: hidden;
+    
     &:hover{
         animation-play-state: paused;
     }
 }
     &_load::after{
     content: '';
-    position: fixed;
+    position: absolute;
     top: 5px; left: 5px; bottom: 5px; right: 5px;
     border-radius: 50%;
     border: 10px solid transparent;
@@ -65,6 +66,16 @@
         transform: rotate(360deg);
         opacity: 0;
         visibility: hidden;
+    }
+}
+@keyframes spin-background {
+    0%{
+        visibility: visible;
+        opacity: 1;
+    }
+    100%{
+        visibility: hidden;
+        opacity: 0;
     }
 }
 }
