--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,7 +12,7 @@
         position: absolute;
         width: 50px;
         height: 50px;
-        left: 30px; top: 40%;
+        left: 10%; top: 40%;
         font-size: 20px;
     }
 }
