--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,3 +1,6 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
 .image{
     width: 100%;
     height: 50vh;
@@ -8,123 +11,124 @@
         object-fit: cover;
     }
 }
-
-#menu{
-    overflow: hidden;
-    font-family: 'Roboto', sans-serif;
-    margin: -25px 0 25px 0;
-    .menu_top{
-    position: absolute;
-    display: flex;
-    @include center-element;
-    justify-content: space-between;
-    top: 44%;
+#menu {
+    background: white;
     width: 100%;
-    background-color: #f6f6f6;
-    border-radius: 40px 40px 0 0;
-        &_title{
-            font-family: 'Shrikhand', cursive; 
-            font-weight: 500; 
-            font-size: 1.75em;
-            padding: 0 25px;
-        }
-    }  
+    @include center-element;
 }
-
-.menu_bloc{
-    display: grid;
-    grid-gap: 30px;
-    margin: 0 5%;
-    &_card{
+.menu {
+    margin-top: -200px;
+    padding: 0 20px;
+    width: 100%;
+    max-width: 1230px;
+    border-radius: 30px 30px 0 0;
+    background-color: #F6F6F6;
+    &_top {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        &_title {
+            font-family: 'Shrikhand', cursive;
+        }
+        }
+        &__grid {
+        display: grid;
+        grid-gap: 40px;
+        &__bloc {
         display: grid;
         grid-gap: 15px;
+        }
+        &__title {
+            & h3 {
+                position: relative;
+                font-weight: 400;
+                text-transform: uppercase;
+                &::after {
+                    content: '';
+                    width: 50px;
+                    height: 4px;
+                    background: #99e2d0;
+                    position: absolute;
+                    z-index: 20;
+                    left: 0px; bottom: -8px ;
+                }        
+            }    
+        }
+        &__case {
+            position: relative;
+            cursor: pointer;
+            overflow: hidden;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            height: 70px;
+            border-radius: 15px;
+            background-color: white ;
+            box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.1);
+            &:hover .validation__box {
+                @include center-element;
+                animation: slide-left 0.5s ease ;
+                transform-origin: right;
+            }
+            &:hover .menu__case__price {
+                padding-right: 70px;
+                transition: 0.5s ease ;
+            }
+            .validation__box {
+                display: none;
+                position: absolute;
+                background: $color-tertiary;
+                border-radius: 0 15px 15px 0;
+                right: 0px;
+                padding: 0 18px;
+                height: 100%;
+                i {
+                    font-size: 25px;
+                    color: white;
+                    transform: rotate(180deg);
+                    animation: rotate 0.5s both;
+                }
+            }
+        }    
     }
-    &_title h3{
-        text-transform: uppercase;
-        font-weight: 400;
-        line-height: 1.7em;
-        border-bottom: solid 4px $color-tertiary;
-        width: 45px;
+    &__case {
+        &__dish {
+            margin-left: 20px;
+            white-space: nowrap;
+            overflow: hidden;
+            & p {
+                margin: 0;
+                text-overflow: ellipsis;
+                overflow: hidden;
+            }
+            
+            &-title {
+                font-weight: bold;
+            }
+        }
+        &__price {
+            padding-right: 20px;
+            font-weight: bold;
+            padding-left: 7px;
+        }
     }
-
 }
 
-.menu_dishes{
-    position: relative;
-    overflow: hidden;
-    @include center-element;
+.dish-and-price {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 95%;
-    background-color: white;
-    border-radius: 20px;
-    padding: 6px 10px;
-    box-shadow: 1px 3px 10px 1px #ececec;
-    cursor: pointer;
-    line-height: 0.4em;
-    .dish_title{
-        font-size: 1.1em;
-    }
-    .dish_subtitle{
-        font-size: 0.92em;
-    }
-    .dish_price{
-        align-self: flex-end;
-        font-weight: 700;
-        font-size: 0.95em;
-        padding: 0 15px 10px 0;
-      }
-    }
-    
+}
+
+
     /*-- menu animation --*/ 
 
-    /*.menu_dishes{
-       animation: opacity 1.5s both;
-    }
-
-    @keyframes opacity {
-        0%{
-            opacity: 0;
-        }
-        100%{
-            opacity: 1;
-        }
-    }
-
-    .menu_dishes--1{
-        animation-delay: 0.3s;
-    }
-    .menu_dishes--2{
-        animation-delay: 0.5s;
-    }
-    .menu_dishes--3{
-        animation-delay: 0.7s;
-    }
-    .menu_dishes--4{
-        animation-delay: 0.9s;
-    }
-    .menu_dishes--5{
-        animation-delay: 1.1s;
-    }
-    .menu_dishes--6{
-        animation-delay: 1.3s;
-    }
-    .menu_dishes--7{
-        animation-delay: 1.5s;
-    }
-    .menu_dishes--8{
-        animation-delay: 1.7s;
-    }
-    .menu_dishes--9{
-        animation-delay: 1.9s;
-    }
-    .menu_dishes--10{
-        animation-delay: 2.1s;
-    }*/
 $anim-delay: 200ms;
 
-    .menu_dishes{
+    .menu__grid__case{
         animation: opacity 1.5s both;
         @for $i from 1 through 10 {
             &--#{$i} {
@@ -140,3 +144,26 @@ $anim-delay: 200ms;
             opacity: 1;
         }
     }
+
+    /*-- checkbox animation --*/
+
+    @keyframes slide-left {
+        0% {
+                  transform: scaleX(0);
+        }
+        100% {
+         
+                  transform: scaleX(-50px);
+        }
+      }
+
+
+     @keyframes rotate {
+        0% {
+                  transform: rotate(0);
+        }
+        100% {
+                  transform: rotate(360deg);
+        }
+      }
+    
