--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,83 @@
+/*-- heart animation --*/
+.fa-heart {
+  display: flex;
+  font-size: 1.8em;
+  color: transparent;
+  -webkit-text-stroke: 2px black;
+  opacity: 0.4;
+  margin-right: 30px;
+}
+
+.fa-heart:hover {
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  background-clip: "";
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 0px;
+  opacity: 1;
+  transition: all 1.8s ease-in-out;
+}
+
+/*-- menu animation --*/
+.menu__grid__case {
+  animation: opacity 1.5s both;
+}
+.menu__grid__case--1 {
+  animation-delay: 200ms;
+}
+.menu__grid__case--2 {
+  animation-delay: 400ms;
+}
+.menu__grid__case--3 {
+  animation-delay: 600ms;
+}
+.menu__grid__case--4 {
+  animation-delay: 800ms;
+}
+.menu__grid__case--5 {
+  animation-delay: 1000ms;
+}
+.menu__grid__case--6 {
+  animation-delay: 1200ms;
+}
+.menu__grid__case--7 {
+  animation-delay: 1400ms;
+}
+.menu__grid__case--8 {
+  animation-delay: 1600ms;
+}
+.menu__grid__case--9 {
+  animation-delay: 1800ms;
+}
+.menu__grid__case--10 {
+  animation-delay: 2000ms;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/*-- checkbox animation --*/
+@keyframes slide-left {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 body {
   margin: 0;
   background: #f6f6f6;
@@ -92,7 +172,7 @@ a:visited {
   width: 100vw;
   height: 100vh;
   z-index: 20;
-  animation: spin-background 4s ease-out forwards;
+  animation: spin-background 3.5s ease-out forwards;
 }
 .spinner .spinner_icon {
   color: #9356DC;
@@ -103,7 +183,7 @@ a:visited {
   left: 60px;
   bottom: 50px;
   right: 50px;
-  animation: spin 10s 0.25s forwards;
+  animation: spin 10s 0.3s forwards;
 }
 .spinner_load {
   width: 180px;
@@ -118,7 +198,7 @@ a:visited {
   right: 0;
   bottom: 0;
   background: rgba(255, 255, 255, 0.8);
-  animation: spin 4s 0.25s ease-out forwards;
+  animation: spin 3.5s 0.3s forwards;
   z-index: 10;
 }
 .spinner_load:hover {
@@ -134,7 +214,7 @@ a:visited {
   border-radius: 50%;
   border: 10px solid transparent;
   border-top-color: #99E2D0;
-  animation: spin 5s 0.25s forwards;
+  animation: spin 5s 0.3s forwards;
 }
 .spinner_load::before {
   content: "";
@@ -146,7 +226,7 @@ a:visited {
   border-radius: 50%;
   border: 10px solid transparent;
   border-top-color: #FF79DA;
-  animation: spin 8s 0.25s forwards;
+  animation: spin 8s 0.3s forwards;
 }
 @keyframes spin {
   0% {
@@ -158,7 +238,7 @@ a:visited {
     opacity: 1;
   }
   99% {
-    opacity: 0.8;
+    opacity: 0.7;
   }
   100% {
     transform: rotate(360deg);
@@ -170,6 +250,9 @@ a:visited {
   0% {
     visibility: visible;
     opacity: 1;
+  }
+  90% {
+    opacity: 0.7;
   }
   100% {
     visibility: hidden;
@@ -244,6 +327,9 @@ a:visited {
   flex-direction: column;
   align-items: flex-start;
 }
+.restaurants_title {
+  margin-left: -2%;
+}
 
 .restaurant_items {
   display: grid;
@@ -301,25 +387,6 @@ a:visited {
 .restaurant_bloc-info {
   margin-left: 15px;
   line-height: 5px;
-}
-
-/*-- heart animation --*/
-.fa-heart {
-  display: flex;
-  font-size: 1.8em;
-  color: transparent;
-  -webkit-text-stroke: 2px black;
-  opacity: 0.4;
-  margin-right: 30px;
-}
-
-.fa-heart:hover {
-  background: linear-gradient(#FF79DA, #9356DC);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 0px;
-  opacity: 1;
-  transition: all 1.8s ease-in-out;
 }
 
 body {
@@ -573,7 +640,7 @@ body {
   flex-direction: column;
 }
 .notice_title {
-  margin: 0;
+  margin: 0 3%;
 }
 .notice_steps {
   display: flex;
@@ -619,7 +686,7 @@ body {
 }
 
 /*-- INDEX PAGE --*/
-@media screen and (min-width: 765px) {
+@media screen and (min-width: 735px) {
   .restaurants {
     margin: 0 15px;
   }
@@ -655,6 +722,12 @@ body {
   }
   .footer-link {
     justify-content: center;
+  }
+}
+@media screen and (min-width: 980px) {
+  .restaurant_items {
+    width: 100%;
+    grid-gap: 45px;
   }
 }
 /*-- MENU PAGES --*/
