--- a/sass/pages/_guidelines.scss
+++ b/sass/pages/_guidelines.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column ;
     &_title{
-        margin: 0;
+        margin: 0 3%;
     }
     &_steps{
         display: flex;
