--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -6,6 +6,9 @@
         @include center-element;
         flex-direction: column;
         align-items: flex-start;
+        &_title{
+            margin-left: -2%;
+        }
     }
     .restaurant{
         &_items{
@@ -66,22 +69,3 @@
     }
 }
 
-/*-- heart animation --*/
-
- .fa-heart{	
-      display:flex;
-      font-size: 1.8em;
-      color:transparent;
-      -webkit-text-stroke:2px black;
-      opacity:0.4;
-      margin-right: 30px;
-  }
-  
-  .fa-heart:hover{
-      background:linear-gradient(#FF79DA, #9356DC);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      -webkit-text-stroke: 0px;
-      opacity:1;
-      transition: all 1.8s ease-in-out;  
-    }
