--- a/sass/pages/_responsive.scss
+++ b/sass/pages/_responsive.scss
@@ -48,7 +48,7 @@
             grid-gap: 65px;
         }
         &_item{
-            width: 115%;
+            width: 400px;
         }
     }
 }
@@ -56,9 +56,10 @@
 /*-- MENU PAGES --*/
 
 @media screen and (min-width: 665px){
-    .menu{
-        margin-top: -80px;
+    #menu{
+        margin-top: 130px;
     }
+
 }
 @media screen and (min-width: 765px) {
 
